log
test.c: In function ‘enlarge_test’:
test.c:442:9: error: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Werror=restrict]
  442 |         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:439:18: error: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Werror=restrict]
  439 |             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:438:39: error: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Werror=restrict]
  438 |             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
cc1: all warnings being treated as errors
Compilation failed
0738ca7
test.c: In function ‘enlarge_test’:
test.c:442:9: warning: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Wrestrict]
  442 |         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:439:18: warning: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Wrestrict]
  439 |             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:438:39: warning: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Wrestrict]
  438 |             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
 tests:  0|6
total_score: 0/70
0738ca7
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:18: warning: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Wincompatible-pointer-types]
   59 |     new->buckets = (Pair *) calloc(capacity, sizeof(Pair));
      |                  ^
test.c: In function ‘enlarge_test’:
test.c:442:9: warning: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Wrestrict]
  442 |         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:439:18: warning: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Wrestrict]
  439 |             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:438:39: warning: ‘sprintf’ argument 3 overlaps destination object ‘msg’ [-Wrestrict]
  438 |             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by ‘restrict’-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
 tests:  1|5
total_score: 10/70
8a90218
